Rewrite without bash